# signup_chatbot

./: README.md  pyproject.toml  requirements.txt
examples/: interactive_test.py  test.py
examples/models/: real_estate.py
signup_chatbot/: __init__.py  config_models.py  memory.py  signup.py
signup_chatbot/tools/: __init__.py  edit_user_profile.py  tool_models.py
signup_chatbot/utils/: email_validator.py
tests/: conftest.py  test_email_validator.py  test_memory.py  test_signup.py
